# fo76-dumps

./: .gitignore  CHANGELOG.md  Files.py  IO.py  README.md  State.py  XEdit.py  config_default.py  export.py  fo76dumps.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  dump_request.md  question.md
Edit scripts/: ExportAll.fo76pas  ExportAll.fo76ptspas  ExportAll.pas  ExportCore.pas  ExportFlatList.pas  ExportJson.pas  ExportLargeFile.pas  ExportTabularALCH.pas  ExportTabularARMO.pas  ExportTabularCLAS.pas  ExportTabularCOBJ.pas  ExportTabularCore.pas  ExportTabularENTM.pas  ExportTabularFACT.pas  ExportTabularFLOR.pas  ExportTabularFLORA.pas  ExportTabularGLOB.pas  ExportTabularGMST.pas  ExportTabularIDs.pas  ExportTabularLOC.pas  ExportTabularLSCR.pas  ExportTabularLVLI.pas  ExportTabularMISC.pas  ExportTabularNPC_.pas  ExportTabularOMOD.pas  ExportTabularOTFT.pas  ExportTabularRACE.pas  ExportTabularWEAP.pas  ExportWikiBOOK.pas  ExportWikiCore.pas  ExportWikiDIAL.pas  ExportWikiNOTE.pas  ExportWikiTERM.pas  _ExportGLOB.pas  _SerialiseToJson.pas
raw/Edit scripts/: SerialiseToJson.pas  _SerialiseToJson.pas
tabular/Edit scripts/: ExportTabularCOBJ.pas  ExportTabularCore.pas  ExportTabularGLOB.pas  ExportTabularGMST.pas  ExportTabularIDs.pas  ExportTabularMISC.pas  ExportTabularSCRAP.pas  _ExportGMST.pas  _ExportIDs.pas
wiki/Edit scripts/: ExportWikiBOOK.pas  ExportWikiCore.pas  ExportWikiDIAL.pas  ExportWikiNOTE.pas  ExportWikiTERM.pas  _ExportWikiNOTE.pas
